[package]
name = "byo-graphql"
version = "0.1.0"
licence = "MIT"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/byo-graphql"
description = "simple bring-your-own graphql client"
edition = "2018"
keywords = ["graphql", "client"]
categories = []
readme = "README.md"

[dependencies]
anyhow = "1.0"
log = "0.4"
reqwest = { version = "0.10", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.7"
